--- a/docker-compose-for-local.yaml
+++ b/docker-compose-for-local.yaml
@@ -6,7 +6,7 @@ services:
   nginx:
     build:
       context: biap-app-ui-front
-      dockerfile: Dockerfile
+      dockerfile: DockerfileWithoutSSL
       args:
         REACT_APP_BASE_URL: ${REACT_APP_BASE_URL}
         REACT_APP_MMI_BASE_URL: ${REACT_APP_MMI_BASE_URL}
