--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Sensitive config files
+config/dev/firebase-service-account.json
+.env
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
